--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,25 +6,25 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #9202c7;
+  --ifm-color-primary-dark: #6d027f;
+  --ifm-color-primary-darker: #4d0158;
+  --ifm-color-primary-darkest: #340038;
+  --ifm-color-primary-light: #b002ef;
+  --ifm-color-primary-lighter: #d102ff;
+  --ifm-color-primary-lightest: #e917ff;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
-[data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+[data-theme="dark"] {
+  --ifm-color-primary: #b002ef;
+  --ifm-color-primary-dark: #8700c2;
+  --ifm-color-primary-darker: #610099;
+  --ifm-color-primary-darkest: #44006b;
+  --ifm-color-primary-light: #d802ff;
+  --ifm-color-primary-lighter: #f500ff;
+  --ifm-color-primary-lightest: #ff4dff;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
